# polaris

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.sh  run
.claude/skills/advisory-mode/: SKILL.md
.claude/skills/document/: SKILL.md
.claude/skills/document-change/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/tdd-plan/: SKILL.md
.github/workflows/: ci.yml
crates/polaris-core/: Cargo.toml
crates/polaris-core/src/: editor.rs  lib.rs  scene.rs
crates/polaris-core/src/geometry/: circle.rs  line.rs  mod.rs  point.rs  segment.rs
crates/polaris-wasm/: Cargo.toml
crates/polaris-wasm/src/: lib.rs
docs/plans/: 001-mvp-roadmap.md
web/: index.html  main.js
